--- a/Tutorial.html
+++ b/Tutorial.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <link rel="stylesheet" href="tutorial.css">
+</head>
     <body style="background-color: rgb(223, 223, 223);">
 
         <!--Basic headings and paragraphs-->
@@ -16,7 +19,7 @@
         
         <!--Image-->
         <p>Below is an image</p>
-        <img src="smile.png" alt="Smiley Face" width="50" height="50">
+        <img src="images/smile.png" alt="Smiley Face" width="50" height="50">
 
         <!--Linebreaks-->
         <p>Testing <br> line <br> breaks</p>
@@ -139,5 +142,153 @@
 
         <!--Bi-Directional Override can change the direction in which the text is written-->
         <p><bdo dir="rtl">This text will be written from right to left</bdo></p>
+        <hr>
+
+        <!--Colours using names-->
+        <h2>Colour names</h1>
+        <h3 style="background-color: blueviolet;">Colour: Blue Violet</h2>
+        <h3 style="background-color: darkslateblue;">Colour: Dark Slate Blue</h2>
+
+        <h2>Background Colour</h2>
+        <h3 style="background-color: firebrick;">Hello World</h3>
+        <p style="background-color: goldenrod;">This is a paragraph with a background colour</p>
+
+        <h2>Text Colour</h2>
+        <h3 style="color:green">Coloured Heading</h3>
+        <p style="color: royalblue;">Coloured Paragraph</p>
+
+        <h2>Border Colour</h2>
+        <h3 style="border:2px solid rebeccapurple">Coloured Heading Border</h3>
+        <h3 style="border: 4px solid red;">Another Coloured Heading Border</h3>
+
+        <h2>Colour Values</h2>
+        <h2 style="background-color:rgb(31, 112, 150);">rgb(31, 112, 150)</h2>
+        <h2 style="background-color: #963f83;">#963f83</h2>
+        <h2 style="background-color: hsl(9, 100%, 64%);"> hsl(9, 100, 64)</h2>
+
+        <h2 style="background-color: rgba(0, 26, 255, 0.1);">RGBA Transparency</h2>
+        <h2 style="background-color: rgba(255, 71, 132, 0.2);">HSLA Transparency</h2>
+        <hr>
+
+
+        <h1>Links</h1>
+        <!--Normal Hyperlink-->
+        <a href="WebPage2.html" target="_self" title="Go to WebPage2">Link to WebPage2</a>
+        <!--Picture as hyperlink-->
+        <p>
+            <a href="WebPage2.html">
+            <img src="images/smile.png" alt="Smiley Face" style="float:left;width: 50px;height: 50px;"></a>
+            Click the picture, it is a link to the same page
+        </p>
+        <!--Email-->
+        <p><a href="mailto:someone@example.com">Send email</a></p>
+        
+        <!--Button link-->
+        <p><button onclick="document.location='WebPage2.html'">WebPage2</button></p>
+        <hr>
+
+        <!--Tables-->
+        <h1>Tables</h1>
+        <table id="t02" style="width: 100%;">
+            <tr>
+                <th>Firstname</th>
+                <th>Lastname</ht>
+                <th>Age</th>
+            </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+            </tr>
+            <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>80</td>
+            </tr>
+        </table>
+        <hr>
+
+        <!--Table that spans many columns-->
+        <h3>Table that spans many columns</h3>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th colspan="2">Telephone</th>
+            </tr>
+            <tr>
+                <td>Bill Gates</td>
+                <td>12345</td>
+                <td>67890</td>
+            </tr>
+        </table>
+        <hr>
+
+        <!--Table that spans many rows-->
+        <h3>Table that spans many rows, CSS applied using ID</h3>
+        <table id="t01">
+            <tr>
+                <th>Name:</th>
+                <td>Bill Gates</td>
+            </tr>
+            <tr>
+                <th rowspan="2">Telephone</th>
+                <td>12345</td>
+            </tr>
+            <tr>
+                <td>67890</td>
+            </tr>
+        </table>
+        <hr>
+
+        <!--Table with caption-->
+        <h3>Table with caption</h3>
+        <table style="width: 100%;">
+            <caption>Monthly Savings</caption>
+            <tr>
+                <th>Month</th>
+                <th>Savings</th>
+            </tr>
+            <tr>
+                <td>January</td>
+                <td>$100</td>
+            </tr>
+            <tr>
+                <td>February</td>
+                <td>$50</td>
+            </tr>
+        </table>
+
+        <!--Lists-->
+        <h2>Lists</h2>
+
+        <!--Unordered List-->
+        <p>Unordered List:</p>
+        <ul>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+        </ul>
+
+        <!--Ordered List-->
+        <p>Ordered List:</p>
+        <ol>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <Li>Milk</Li>
+        </ol>
+
+        <!--Description List-->
+        <dl>
+            <dt>Coffee</dt>
+            <dd>- black hot drink</dd>
+            <dt>Milk</dt>
+            <dd>- white cold drink</dd>
+        </dl>
+
     </body>
 </html>
