--- a/Tutorial.html
+++ b/Tutorial.html
@@ -175,11 +175,12 @@
         <!--Normal Hyperlink-->
         <a href="WebPage2.html" target="_self" title="Go to WebPage2">Link to WebPage2</a>
         <!--Picture as hyperlink-->
-        <p>
+        <div style="border: 1px solid black;">
             <a href="WebPage2.html">
             <img src="images/smile.png" alt="Smiley Face" style="float:left;width: 50px;height: 50px;"></a>
-            Click the picture, it is a link to the same page
-        </p>
+            <p>Click the picture, it is a link</p>
+        </div>
+
         <!--Email-->
         <p><a href="mailto:someone@example.com">Send email</a></p>
         
@@ -289,6 +290,13 @@
             <dt>Milk</dt>
             <dd>- white cold drink</dd>
         </dl>
+        <hr>
+
+        <!--Div and span-->
+        <div style="border: 1px solid black;">
+            <h2>This is a div</h2>
+            <p>This is a <span style="border: 1px solid black;">span element</span> inside a paragraph</p>
+        </div>
 
     </body>
 </html>
